--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
         </div>
         <div class="result">
           <div class="link">
-            <p></p>
+            <p class="pLink"></p>
           </div>
           <div class="response">
-            <p></p>
+            <p class="pResponse"></p>
             <button class="copyButton">Copy</button>
           </div>
         </div>
