--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
         <img src="images/logo.svg" alt="logo">
       </div>
       <nav class="navbar">
-        <ul class="menu">
-          <li>Features</li>
-          <li>Pricing</li>
-          <li>Resources</li>
-        </ul>
-        <ul class="buttons">
-          <li>Login</li>
-          <li>Sign Up</li>
-        </ul>
+        <img src="images/bars-solid.svg" alt="menuHamburger" class='menuHamburger'>
+        <div class="alignMenus">
+          <ul class="menu">
+            <li>Features</li>
+            <li>Pricing</li>
+            <li>Resources</li>
+          </ul>
+          <ul class="buttons">
+            <li>Login</li>
+            <li>Sign Up</li>
+          </ul>
+      </div>
       </nav>
     </div>
   </header>
